2004-06-13  Jan Schmidt  <thaytan@mad.scientist.com>
	* ext/esd/esdsink.c: (gst_esdsink_change_state):
	* ext/esd/esdsink.h:
	Close the esd connection on pause, because esd will just wait -  
	blocking all other esd clients indefinitely.

2004-06-12  Christophe Fergeau  <teuf@gnome.org>

	* gst/tags/gstvorbistag.c: replaced a g_warning which I added in my
	  previous commit with GST_DEBUG

2004-06-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  add a header check for a dvdread header in dvdnav.  Fixes #133002

2004-06-12  Zaheer Abbas Merali  <zaheerabbas@merali.org>

	* gst/tcp/gsttcpclientsink.c: (gst_tcpclientsink_init_send):
	* gst/tcp/gsttcpclientsink.h:
	* gst/tcp/gsttcpclientsrc.c: (gst_tcpclientsrc_init_receive):
	* gst/tcp/gsttcpclientsrc.h:
	* gst/tcp/gsttcpserversink.c: (gst_tcpserversink_init),
	(gst_tcpserversink_handle_server_read),
	(gst_tcpserversink_init_send):
	* gst/tcp/gsttcpserversink.h:
	* gst/tcp/gsttcpserversrc.c: (gst_tcpserversrc_init_receive):
	* gst/tcp/gsttcpserversrc.h:
	Modified the tcp plugins so they are portable (IPv4,IPv6, any future 
        version of IP)

2004-06-12  Zaheer Abbas Merali  <zaheerabbas@merali.org>

	* configure.ac:
	Added ogg library so that OSX detects libtheora properly
	
2004-06-11  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theoradec.c: (theora_dec_chain),
	(theora_dec_change_state):
	Don't try to decode frames before we received a keyframe.

2004-06-11  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_class_init),
	(gst_ogg_mux_init), (gst_ogg_mux_next_buffer),
	(gst_ogg_mux_get_headers), (gst_ogg_mux_set_header_on_caps),
	(gst_ogg_mux_send_headers), (gst_ogg_mux_loop),
	(gst_ogg_mux_get_property), (gst_ogg_mux_set_property):
	Added property to set the maximum delay of a page.

2004-06-10  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_class_init),
	(gst_ogg_mux_init), (gst_ogg_mux_next_buffer),