@@ -1,3 +1,11 @@
+2004-06-14  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/volume/.cvsignore:
+	* gst/volume/Makefile.am:
+	* gst/volume/demo.c: (value_changed_callback), (idler),
+	(setup_gui), (main):
+	  added small demo app
+
 2004-06-13  Jan Schmidt  <thaytan@mad.scientist.com>
 	* ext/esd/esdsink.c: (gst_esdsink_change_state):
 	* ext/esd/esdsink.h:
